k8s/processor-analytics/deploy/processor-analytics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: processor-analytics-service
spec:
  type: ClusterIP
  selector:
    app: processor-analytics-app
  ports:
  - port: 80
    targetPort: prc-analyt-port
    protocol: TCP
