k8s/processor-analytics/deploy/processor-analytics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: processor-analytics-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /processor-analytics(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: processor-analytics-service
            port:
              number: 80
